# 18743-Energy-Efficient-Hough-Transform

./: README.md
Android-CPU/: README.md  accum.txt  angle.txt  blurred.txt  grad_y.txt  gray.txt  houghTransform.cpp  hough_lines.txt  mag.txt  nms_accum.txt  nms_grad.txt  thresh.txt
Android-CPU/Android-App/: CMakeLists.txt  HoughTransform.cpp  HoughTransform.h  MainActivity.java  build.gradle  native-lib.cpp
Android-GPU/: README.md
Data/: README.md  example_hough.m  single_bar_frame.hex
Data/split_single_bar_frame/: r0.hex  r000.hex  r000.mif  r001.hex  r001.mif  r002.hex  r002.mif  r003.hex  r003.mif  r004.hex  r004.mif  r005.hex  r005.mif  r006.hex  r006.mif  r007.hex  r007.mif  r008.hex  r008.mif  r009.hex  r009.mif  r010.hex  r010.mif  r011.hex  r011.mif  r012.hex  r012.mif  r013.hex  r013.mif  r014.hex  r014.mif  r015.hex  r015.mif  r016.hex  r016.mif  r017.hex  r017.mif  r018.hex  r018.mif  r019.hex  (+517 more)
Data/split_single_bar_frame_accum/: r000.mif  r001.mif  r002.mif  r003.mif  r004.mif  r005.mif  r006.mif  r007.mif  r008.mif  r009.mif  r010.mif  r011.mif  r012.mif  r013.mif  r014.mif  r015.mif  r016.mif  r017.mif  r018.mif  r019.mif  r020.mif  r021.mif  r022.mif  r023.mif  r024.mif  r025.mif  r026.mif  r027.mif  r028.mif  r029.mif  r030.mif  r031.mif  r032.mif  r033.mif  r034.mif  r035.mif  r036.mif  r037.mif  r038.mif  r039.mif  (+140 more)
Data/split_single_bar_frame_angle/: r001.mif  r040.mif
Data/split_single_bar_frame_blurred/: r000.mif  r001.mif  r002.mif  r003.mif  r004.mif  r005.mif  r006.mif  r007.mif  r008.mif  r009.mif  r010.mif  r011.mif  r012.mif  r013.mif  r014.mif  r015.mif  r016.mif  r017.mif  r018.mif  r019.mif  r020.mif  r021.mif  r022.mif  r023.mif  r024.mif  r025.mif  r026.mif  r027.mif  r028.mif  r029.mif  r030.mif  r031.mif  r032.mif  r033.mif  r034.mif  r035.mif  r036.mif  r037.mif  r038.mif  r039.mif  (+216 more)
Data/split_single_bar_frame_combined/: r000.mif  r001.mif  r002.mif  r003.mif  r004.mif  r005.mif  r006.mif  r007.mif  r008.mif  r009.mif  r010.mif  r011.mif  r012.mif  r013.mif  r014.mif  r015.mif  r016.mif  r017.mif  r018.mif  r019.mif  r020.mif  r021.mif  r022.mif  r023.mif  r024.mif  r025.mif  r026.mif  r027.mif  r028.mif  r029.mif  r030.mif  r031.mif  r032.mif  r033.mif  r034.mif  r035.mif  r036.mif  r037.mif  r038.mif  r039.mif  (+214 more)
Data/split_single_bar_frame_grad/: r000.mif  r001.mif  r002.mif  r003.mif  r004.mif  r005.mif  r006.mif  r007.mif  r008.mif  r009.mif  r010.mif  r011.mif  r012.mif  r013.mif  r014.mif  r015.mif  r016.mif  r017.mif  r018.mif  r019.mif  r020.mif  r021.mif  r022.mif  r023.mif  r024.mif  r025.mif  r026.mif  r027.mif  r028.mif  r029.mif  r030.mif  r031.mif  r032.mif  r033.mif  r034.mif  r035.mif  r036.mif  r037.mif  r038.mif  r039.mif  (+216 more)
Data/split_single_bar_frame_grad_x/: r194.mif
FPGA/: README.md
Scripts/: README.md  extractImage.m  extractVideo.m  makeTanLUT.py  splitAccum.py  splitAngle.py  splitBlurred.py  splitCombinedMag.py  splitGrad.py  splitGray.py  splitHex.py  splitMag.py  splitThresh.py
(+3065 files in other folders)
